Edited no orders yet message for Buyer and Cook orders; fixed alignment in mobile UI

--- a/src/views/BuyerOrders/BuyerOrderCard.css
+++ b/src/views/BuyerOrders/BuyerOrderCard.css
@@ -169,7 +169,7 @@
 @media all and (max-width: 767px) {
     .buyerordercard-header {
         display: block;
-        padding: 3px 10px 5px 10px;
+        padding: 3px 10px 5px 0px;
     }
     .buyerordercard-header>div {
         margin-left: 0px;
