--- a/src/views/BuyerOrders/index.css
+++ b/src/views/BuyerOrders/index.css
@@ -23,6 +23,15 @@
     margin-top: 2.5em;
 }
 
+#buyerorders-no-orders-message {
+    font-size: 1.25em;
+}
+
+#buyerorders-no-orders-message > .ui.purple.button {
+    font-weight: 400;
+    font-size: 1em;
+}
+
 @media all and (max-width: 767px) {
     .buyerorders {
         width: 90%;
